Publishing Tibco Developer Hub 1.6.0 Charts to public repo.

--- a/charts/tibco-developer-hub/templates/backstage-deployment.yaml
+++ b/charts/tibco-developer-hub/templates/backstage-deployment.yaml
@@ -1,6 +1,6 @@
 # Copyright © 2023. Cloud Software Group, Inc.
-# This file is subject to the license terms contained
-# in the license file that is distributed with this file.
+  # This file is subject to the license terms contained
+  # in the license file that is distributed with this file.
 
 {{- $installDir := .Values.backstage.installDir -}}
 {{ $cpHostname := (.Values.global.cp).cpHostname | required ".Values.global.cp.cpHostname is required." }}
@@ -92,11 +92,12 @@ spec:
       {{- end }}
       {{- end }}
       {{- end }}
+      {{- if and (.Values.postgresql.enabled) (.Values.global.cp.resources.storage) (.Values.global.cp.resources.storage.storageClassName) }}
       initContainers:
         - name: check-db-ready
           image: {{ include "backstage.image.registry" .}}{{"/"}}{{ include "backstage.image.repository" .}}{{"/"}}{{ .Values.initContainer.image.name }}:{{ .Values.initContainer.image.tag }}
-          command: ['sh', '-c', 
-            'until pg_isready -U {{ .Values.postgresql.auth.username }} -h {{ include "backstage.postgresql.host" . }} -p 5432; 
+          command: ['sh', '-c',
+            'until pg_isready -U {{ .Values.postgresql.auth.username }} -h {{ include "backstage.postgresql.host" . }} -p 5432;
             do echo waiting for database; sleep 2; done;']
           {{- if .Values.global.cp.enableResourceConstraints }}
           {{- if .Values.appInit.resources }}
@@ -108,8 +109,9 @@ spec:
           securityContext:
             {{- toYaml .Values.appInit.securityContext | nindent 12 }}
           {{- end }}
-      {{- if .Values.backstage.initContainers }}      
+      {{- if .Values.backstage.initContainers }}
         {{- include "common.tplvalues.render" ( dict "value" .Values.backstage.initContainers "context" $) | nindent 8 }}
+      {{- end }}
       {{- end }}
       containers:
         - name: backstage-backend
@@ -193,7 +195,7 @@ spec:
             - name: CP_CERTIFICATE_SECRET_PATH
               value: {{ $cpCertificateSecretPath }}
             {{- end }}
-            {{- if .Values.postgresql.enabled }}
+            {{- if and (.Values.postgresql.enabled) (.Values.global.cp.resources.storage) (.Values.global.cp.resources.storage.storageClassName) }}
             - name: POSTGRES_HOST
               value: {{ include "backstage.postgresql.host" . }}
             - name: POSTGRES_PORT
@@ -205,6 +207,22 @@ spec:
                 secretKeyRef:
                   name: {{ include "backstage.postgresql.databaseSecretName" . }}
                   key: {{ include "backstage.postgresql.databaseSecretKey" . }}
+            {{- else if .Values.global.cp.resources.dbconfig.dbHost }}
+            - name: PLUGIN_DIVISION_MODE
+              value: schema
+            - name: POSTGRES_DB
+              value: {{ .Values.global.cp.resources.dbconfig.dbName | quote }}
+            - name: POSTGRES_HOST
+              value: {{ .Values.global.cp.resources.dbconfig.dbHost | quote }}
+            - name: POSTGRES_PORT
+              value: {{ .Values.global.cp.resources.dbconfig.dbPort | quote }}
+            - name: POSTGRES_USER
+              value: {{ .Values.global.cp.resources.dbconfig.dbUser | quote }}
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: tibco-developer-hub-postgres-secret
+                  key: DB_PWD
             {{- end }}
             {{- if .Values.backstage.extraEnvVars }}
             {{- include "common.tplvalues.render" ( dict "value" .Values.backstage.extraEnvVars "context" $) | nindent 12 }}
