--- a/charts/tibco-developer-hub/templates/app-config-configmap.yaml
+++ b/charts/tibco-developer-hub/templates/app-config-configmap.yaml
@@ -10,13 +10,14 @@ metadata:
   labels: {{ include "tibcohub.platform.commonLabels" . | nindent 4 }}
 data:
   {{/*
-    set CP URL from .Values.global.cp.cpHostname to .Values.backstage.appConfig.cpLink variable, 
+    set CP URL from .Values.global.cp.cpHostname to .Values.backstage.appConfig.cpLink variable,
     value passed from backstage.appConfig.cpLink will have precedence
  */}}
   app-config.yaml: |
+{{- $baseUrl := print "https://" .Values.global.cp.resources.ingress.fqdn .Values.ingress.pathPrefix -}}
 {{- if .Values.backstage.tibcoDeveloperHubCustomAppVersion }}
-    {{- include "common.tplvalues.render" ( dict "value" (merge .Values.backstage.appConfig (dict "cpLink" .Values.global.cp.cpHostname) (dict "tibcoDeveloperHubCustomAppVersion" .Values.backstage.tibcoDeveloperHubCustomAppVersion)) "context" $) | nindent 4 }}
+    {{- include "common.tplvalues.render" ( dict "value" (mergeOverwrite .Values.backstage.appConfig (dict "cpLink" .Values.global.cp.cpHostname) (dict "app" (dict "baseUrl" $baseUrl)) (dict "backend" (dict "baseUrl" $baseUrl)) (dict "tibcoDeveloperHubCustomAppVersion" .Values.backstage.tibcoDeveloperHubCustomAppVersion)) "context" $) | nindent 4 }}
 {{- else }}
-    {{- include "common.tplvalues.render" ( dict "value" (merge .Values.backstage.appConfig (dict "cpLink" .Values.global.cp.cpHostname)) "context" $) | nindent 4 }}
-{{- end }}  
+    {{- include "common.tplvalues.render" ( dict "value" (mergeOverwrite .Values.backstage.appConfig (dict "cpLink" .Values.global.cp.cpHostname) (dict "app" (dict "baseUrl" $baseUrl)) (dict "backend" (dict "baseUrl" $baseUrl))) "context" $) | nindent 4 }}
+{{- end }}
 {{- end }}
