--- a/charts/tibco-developer-hub/templates/ingress_public_nginx.yaml
+++ b/charts/tibco-developer-hub/templates/ingress_public_nginx.yaml
@@ -2,24 +2,27 @@
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 
-{{ if eq .Values.publicApi.ingress.controllerName "nginx" -}}
+{{ if eq .Values.global.cp.resources.ingress.ingressController "nginx" -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
     nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User,X-Auth-Request-Email,X-Forwarded-Access-Token,X-Auth-Request-Access-Token,X-Atmosphere-Token
-    nginx.ingress.kubernetes.io/auth-signin: https://{{ .Values.publicApi.ingress.config.fqdn }}{{ .Values.publicApi.ingress.config.pathPrefix }}/oauth2/start?rd=$escaped_request_uri
-    nginx.ingress.kubernetes.io/auth-url: https://{{ .Values.publicApi.ingress.config.fqdn }}{{ .Values.publicApi.ingress.config.pathPrefix }}/oauth2/auth
+    nginx.ingress.kubernetes.io/auth-signin: https://{{ .Values.global.cp.resources.ingress.fqdn }}{{ .Values.ingress.pathPrefix }}/oauth2/start?rd=$escaped_request_uri
+    nginx.ingress.kubernetes.io/auth-url: https://{{ .Values.global.cp.resources.ingress.fqdn }}{{ .Values.ingress.pathPrefix }}/oauth2/auth
     nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/x-forwarded-prefix: {{ .Values.ingress.pathPrefix }}
+    nginx.ingress.kubernetes.io/use-regex: "true"
     {{- with .Values.global.cp.resources.ingress.annotations }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
   name: {{ include "common.names.fullname" . }}
   namespace: {{ .Release.Namespace | quote }}
 spec:
-  ingressClassName: {{ .Values.publicApi.ingress.config.className }}
+  ingressClassName: {{ .Values.global.cp.resources.ingress.ingressClassName }}
   rules:
-    - host: {{ .Values.publicApi.ingress.config.fqdn }}
+    - host: {{ .Values.global.cp.resources.ingress.fqdn }}
       http:
         paths:
           - backend:
@@ -27,6 +30,16 @@ spec:
                 name: {{ include "common.names.fullname" . }}
                 port:
                   number: {{ .Values.service.ports.backend }}
-            path: {{ .Values.publicApi.ingress.config.pathPrefix }}
-            pathType: Prefix
+            path: {{ .Values.ingress.pathPrefix }}/(.*)
+            pathType: ImplementationSpecific
+    - host: {{ .Values.global.cp.resources.ingress.fqdn }}
+      http:
+        paths:
+          - backend:
+              service:
+                name: {{ include "common.names.fullname" . }}
+                port:
+                  number: {{ .Values.service.ports.backend }}
+            path: {{ .Values.ingress.pathPrefix }}
+            pathType: Exact
 {{- end }}
