--- a/charts/tp-cp-tibcohub-contrib/values.yaml
+++ b/charts/tp-cp-tibcohub-contrib/values.yaml
@@ -7,7 +7,7 @@ source:
 tibcoHub:
   image:
     name: "dx-tibco-hub-cp-contrib"
-    tag: 174
+    tag: "207"
     pullPolicy: IfNotPresent
 
 containerImageExtractor:
@@ -15,7 +15,7 @@ containerImageExtractor:
     name: "infra-container-image-extractor"
     registry: ""
     repo: ""
-    tag: 98-distroless
+    tag: 106-distroless
     pullPolicy: IfNotPresent
 
 image:
