--- a/charts/dp-flogo-app/templates/ingress-nginx.yaml
+++ b/charts/dp-flogo-app/templates/ingress-nginx.yaml
@@ -16,7 +16,11 @@ metadata:
     {{- include "dp-flogo-app.labels" $dot | nindent 4 }}
     platform.tibco.com/service-discoverable: {{ $path.serviceDiscoverable | quote }}
   annotations:
+    {{- if eq $path.path "/" }}
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    {{- else }}
     nginx.ingress.kubernetes.io/rewrite-target: /$2
+    {{- end }}
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/x-forwarded-prefix: {{ $path.path | quote }}
     {{- if $path.serviceDiscoverable }}
@@ -46,7 +50,11 @@ spec:
             name: {{ include "dp-flogo-app.fullname" $dot }}
             port:
               number: {{ $path.port }}
+        {{- if eq $path.path "/" }}
+        path: {{ $path.path }}(.*)
+        {{- else }}
         path: {{ $path.path }}(/|$)(.*)
+        {{- end }}
         pathType: {{ $path.pathType }}
         
 {{- end }}
