--- a/charts/tp-cp-bwce-utilities/charts/bwce-utilities/values.yaml
+++ b/charts/tp-cp-bwce-utilities/charts/bwce-utilities/values.yaml
@@ -115,8 +115,8 @@ bwStudioImages:
     path: /opt/downloads/
     tag: 2.10.0-HF2-hotfix-amd64
     target_location: bwce-studio/2.10.0-HF2/hotfix-amd64/
-bwStudioDelete: false
-bwStudioDeleteVersions: ""
+bwStudioDelete: true
+bwStudioDeleteVersions: "2.9.0"
 
 bwPluginsJobA:
   tci-bw-plugin-customplugin:
@@ -259,8 +259,8 @@ bwPluginsJobD:
     default: 6.0.0.v33-tci-2.0
   tci-bw-plugin-mq:
     tags:
-      - 8.8.2.v5-tci-2.0
-    default: 8.8.2.v5-tci-2.0
+      - 8.8.2.v17-tci-2.0
+    default: 8.8.2.v17-tci-2.0
   tci-bw-plugin-marketorest:
     tags:
       - 7.2.2.v13.1-tci-2.0
@@ -327,8 +327,8 @@ bwPluginsJobF:
     default: 6.1.0.v23-tci-2.0
   tci-bw-plugin-amqp:
     tags:
-      - 6.5.0.v17-tci-2.0
-    default: 6.5.0.v17-tci-2.0
+      - 6.5.1.v5-tci-2.0
+    default: 6.5.1.v5-tci-2.0
   tci-bw-plugin-ftl:
     tags:
       - 6.7.1.v3-tci-2.0
@@ -397,12 +397,16 @@ bwPluginsExtractJobG: true
 buildtypesExtract: true
 
 
-images:
-  tp-bwce-buildtype:
-    extract_image: true
-    path: /var/lib/bwce/buildtypes
-    tag: 2.10.0-HF2
-    target_location: bwce/buildtypes
+buildtypeImages:
+- name: tp-bwce-buildtype
+  extract_image: true
+  path: /var/lib/bwce/buildtypes
+  tag: 2.10.0-HF2
+  target_location: bwce/buildtypes
+- name: tp-bwce-buildtype
+  delete_image: true
+  tag: 2.9.0
+  target_location: bwce/buildtypes
 
 probes:
   startupProbe: {}
