--- a/charts/tp-cp-flogo-recipes/templates/flogo.yaml
+++ b/charts/tp-cp-flogo-recipes/templates/flogo.yaml
@@ -12,15 +12,15 @@ metadata:
 data:
   version.json: |
     {
-      "capabilityVersion": "1.5.1",
-      "minCPVersion": "1.5.1",
+      "capabilityVersion": "1.6.0",
+      "minCPVersion": "1.6.0",
       "maxCPVersion": "",
       "releaseDate": {{ .Values.capabilities.flogo.releaseDate | quote }},
       "releaseNotes": {{ .Values.capabilities.flogo.releaseNotes | quote }},
       "minVersionRequiredForUpgrade": "1.4.0",
       "minDPVersion": {
-        "dp-core-infrastructure": "1.4.0",
-        "dp-configure-namespace": "1.4.0"
+        "dp-core-infrastructure": "1.6.0",
+        "dp-configure-namespace": "1.5.0"
       }
     }
   package.json: |
@@ -42,7 +42,7 @@ data:
           {
             "version": [
               1,
-              5,
+              6,
               0
             ],
             "capabilityId": "INTEGRATIONCORE",
@@ -51,8 +51,8 @@ data:
           {
             "version": [
               1,
-              5,
-              1
+              6,
+              0
             ],
             "capabilityId": "OAUTH2PROXY",
             "capabilityType": "INFRA_SIDECAR"
@@ -78,7 +78,7 @@ data:
       helmCharts:
         - name: flogoprovisioner
           namespace: ${NAMESPACE}
-          version: "1.5.2"
+          version: "1.6.2"
           repository:
             chartMuseum:
               host: ${HELM_REPO}
@@ -88,14 +88,14 @@ data:
                   cp:
                     logging:
                       fluentbit:
-                        app:
-                          enabled: true
+                        apps:
+                          enabled: ${ENABLE_APPS_FLUENTBIT_SIDECAR}
                   flogoprovisioner:
                     image:
-                      tag: 534-platform-1.5.0
+                      tag: 559-platform-1.6.0
                 config:
                   APP_INIT_IMAGE_TAG: "41"
-                  APP_HELMCHART_VERSION: "1.5.4"
+                  APP_HELMCHART_VERSION: "1.6.3"
                 publicApi:
                   ingress:
                     controllerName: ${INGRESS_CONTROLLER_NAME}
@@ -159,7 +159,7 @@ spec:
         - name: RECIPE_TARGET_LOCATION
           value: "/private/tsc/config/capabilities/platform"
         - name: RECIPE_RELEASE_VERSION
-          value: "1.5.1"
+          value: "1.6.0"
         - name: SPACE_SEPARATED_UNSUPPORTED_RECIPE_VERSIONS
           value: ""
         - name: OVERWRITE_RECIPE
