--- a/charts/tp-cp-integration-bwce/charts/bw-webserver/Chart.yaml
+++ b/charts/tp-cp-integration-bwce/charts/bw-webserver/Chart.yaml
@@ -4,6 +4,6 @@
 
 apiVersion: v1
 name: bw-webserver
-version: 1.5.1
-appVersion: "1.5.1"
+version: 1.6.0
+appVersion: 1.6.0
 description: TIBCO Platform Control Plane - BWCE - WebServer
