--- a/charts/tp-cp-integration-flogo/charts/flogo-webserver/templates/deployment.yaml
+++ b/charts/tp-cp-integration-flogo/charts/flogo-webserver/templates/deployment.yaml
@@ -116,6 +116,11 @@ spec:
             configMapKeyRef:
               name: {{ include "tp-control-plane-dnsdomain-configmap" . }}
               key: TP_CP_ORCH_HOST
+        - name: TP_CP_WEB_SERVER_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: {{ include "tp-control-plane-dnsdomain-configmap" . }}
+              key: TP_CP_WEB_SERVER_HOST
         - name: SYSTEM_INTERNAL_COMPUTE_SERVICE_HOST
           valueFrom:
             configMapKeyRef:
@@ -126,6 +131,12 @@ spec:
             configMapKeyRef:
               name: {{ include "tp-control-plane-dnsdomain-configmap" . }}
               key: SYSTEM_INTERNAL_PROVISIONER_AGENT_HOST
+        - name: DOC_BASE_URL
+          valueFrom:
+            configMapKeyRef:
+              name: {{ include "tp-control-plane-dnsdomain-configmap" . }}
+              key: DOC_BASE_URL
+              optional: true
         - name: CP_SUBSCRIPTION_SINGLE_NAMESPACE
           valueFrom:
             configMapKeyRef:
