Stage charts for 1.6.0

--- a/charts/msg-ems-tp/templates/ems.stateful.yaml
+++ b/charts/msg-ems-tp/templates/ems.stateful.yaml
@@ -244,6 +244,8 @@ spec:
                 value: "/data/boot/tibemsd-ftl.json"
               - name: EMS_HTTP_PORT
                 value: "{{ $emsParams.ems.ports.httpPort }}"
+              - name: EMS_FTL_SPIN
+                value: "{{ $emsParams.ems.ftl_spin }}"
               - name: EMS_SERVICE
                 value: "{{ $emsParams.ems.stsname }}"
               - name: MY_GROUPNAME
