--- a/charts/tp-dp-hawk-console/Chart.yaml
+++ b/charts/tp-dp-hawk-console/Chart.yaml
@@ -5,11 +5,11 @@
 #
 
 apiVersion: v2
-appVersion: 1.5.0
+appVersion: "1.6.0"
 description: A Helm chart for deploying the tp-dp-hawk-console service
 keywords:
 - "hawk-console"
 - "tp-msg-gateway"
 name: tp-dp-hawk-console
 # version: 1.5.0
-version: "1.5.30"
+version: "1.6.12"
