--- a/charts/tp-dp-hawk-console/templates/msg-gateway.ingress.yaml
+++ b/charts/tp-dp-hawk-console/templates/msg-gateway.ingress.yaml
@@ -102,7 +102,10 @@ spec:
     protocol: TCP
   selector:
     tib-msg-stsname: "{{ $svcname }}"
+
 ---
+# Pending removal - deferred to 1.7.0 w/ Single prometheus
+# 1.5.0: Monitors BMDP scrape service
 kind: Service
 apiVersion: v1
 metadata:
@@ -121,4 +124,5 @@ spec:
     protocol: TCP
   selector:
     tib-msg-stsname: "{{ $svcname }}"
+
 {{- end }}
