--- a/charts/tp-dp-hawk-console/values.yaml
+++ b/charts/tp-dp-hawk-console/values.yaml
@@ -20,7 +20,7 @@ replicaCount: "1"
 
 image:
   name: hawk-console
-  tag: "1.5.0.30"
+  tag: "1.6.0.12"
   pullPolicy: IfNotPresent
 
 nodeSelector:
@@ -129,6 +129,14 @@ hawkconsole:
   # default log mode is INFO
   log:
     level: INFO
+
+  # below are the intervals in milliseconds (example as below :30seconds) for each exporter subscription
+  subscription:
+    interval:
+      bw5: 30000
+      be: 30000
+      sys: 30000
+      o11y: 15000
 
 # Pod Security Context configuration
 # This configuration ensures that the pod is run with non-root privileges for enhanced security.
