--- a/charts/tp-cp-core-finops/charts/finops-otel-collector/values.yaml
+++ b/charts/tp-cp-core-finops/charts/finops-otel-collector/values.yaml
@@ -99,7 +99,7 @@ configMap:
 # For example, {{ REDACTED_EMAIL }} becomes {{` {{ REDACTED_EMAIL }} `}}.
 config:
   exporters:
-    logging:
+    debug:
       verbosity: detailed
       sampling_initial: 10
       sampling_thereafter: 5
@@ -143,7 +143,7 @@ config:
           - memory_limiter
           - batch
         exporters:
-          - logging
+          - debug
           - prometheus
 
 # Helm currently has an issue (https://github.com/helm/helm/pull/12879) when using null to remove
@@ -167,7 +167,7 @@ image:
   repository: otel/opentelemetry-collector-contrib
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "0.106.1"
+  tag: ""
   # When digest is set to a non-empty value, images will be pulled by digest (regardless of tag value).
   digest: ""
 imagePullSecrets: []
@@ -175,8 +175,7 @@ imagePullSecrets: []
 # OpenTelemetry Collector executable
 command:
   name: otelcol-contrib
-  extraArgs:
-    - --feature-gates=-component.UseLocalHostAsDefaultHost
+  extraArgs: []
 
 serviceAccount:
   # Specifies whether a service account should be created
